# rocket-userspace

./: .gitignore  API.md  CMakeLists.txt  README.md
cmake/: rocketnpu-config.cmake.in
include/: npu_activation.h  npu_cna.h  npu_dpu.h  npu_hw.h  npu_matmul.h  npu_pool.h  rocket_activation.h  rocket_attn.h  rocket_chain.h  rocket_conv.h  rocket_encoder.h  rocket_ffn.h  rocket_hw_profile.h  rocket_log.h  rocket_matmul.h  rocket_norm.h  rocket_normvision.h  rocket_npu.h  rocket_pool.h  rocket_reduce.h  rocket_resize.h  rocket_siglip.h  rocket_softmax.h
src/: npu_regcmd.c  rocket_activation.c  rocket_affinity.c  rocket_affinity.h  rocket_attn.c  rocket_bf16_stream.c  rocket_chain.c  rocket_conv.c  rocket_conv_transpose.c  rocket_encoder.c  rocket_ffn.c  rocket_hw_profile.c  rocket_log.c  rocket_matmul.c  rocket_matmul_internal.h  rocket_matmul_mt.c  rocket_norm.c  rocket_normvision.c  rocket_npu.c  rocket_pool.c  rocket_prepacked.c  rocket_prepacked_int4.c  rocket_prepacked_int8.c  rocket_reduce.c  rocket_resize.c  rocket_scratch.h  rocket_siglip_encoder.c  rocket_softmax.c
tests/: activation_lut_rocket.c  bytes_moved_rocket.c  chain_layout_rocket.c  conv1d_rocket.c  conv2d_fp16_rocket.c  conv2d_int8_rocket.c  conv_act_rocket.c  conv_dw_int8_runtime.c  conv_transpose_rocket.c  correctness_matrix.sh  cross_entropy_rocket.c  crossop_chain_rocket.c  ctx_pool_throughput.c  cumsum_rocket.c  dump_dw_regcmd.c  dump_regcmd.c  dw_dump_capture.py  elu_rocket.c  encoder_block_rocket.c  ew_minmax_rocket.c  ew_mul_rocket.c  exp_lut_rocket.c  fabench.c  fc_data_bank_sweep_rocket.c  ffn_fused_rocket.c  ffn_rocket.c  flash_attn_rocket.c  gelu_rocket.c  iova_ceiling_rocket.c  irq_affinity_probe.sh  layernorm_rocket.c  leaky_relu_rocket.c  lut_tanh_rocket.c  matmul_accum_int8_rocket.c  matmul_accum_rocket.c  matmul_batch_rocket.c  matmul_bf16_rocket.c  matmul_bf16_stream_rocket.c  matmul_bf16_tiled_rocket.c  matmul_correctness_matrix_rocket.c  (+56 more)
tests/data/teflon-dw-capture/: README.md  dw_pt.tflite
tools/: npu_bench_env.sh  npu_perf_governor.sh  npu_set_irq_affinity.sh  siglip_extract.py  siglip_reference.py
